@@ -44,7 +44,13 @@ class TestSimilarCodeChecker:
     @staticmethod
     def _run_pylint(args: List[str], out: TextIO) -> int:
         """Runs pylint with a patched output."""
-        args = args + ["--persistent=no"]
+        args = args + [
+            "--persistent=no",
+            "--enable=astroid-error",
+            # Enable functionality that will build another ast
+            "--ignore-imports=y",
+            "--ignore-signatures=y",
+        ]
         with _patch_streams(out):
             with pytest.raises(SystemExit) as cm:
                 with warnings.catch_warnings():
@@ -63,8 +69,10 @@ class TestSimilarCodeChecker:
         out = StringIO()
         self._run_pylint(args, out=out)
         actual_output = self._clean_paths(out.getvalue())
+        actual_output_stripped = actual_output.strip()
         expected_output = self._clean_paths(expected_output)
-        assert expected_output.strip() in actual_output.strip()
+        assert expected_output.strip() in actual_output_stripped
+        assert "Fatal error" not in actual_output_stripped
 
     def test_duplicate_code_raw_strings_all(self) -> None:
         """Test similar lines in 3 similar files."""
